--- a/src/main/resources/socketServer.yml
+++ b/src/main/resources/socketServer.yml
@@ -4,6 +4,6 @@
 #                 Socket Server                  #
 # ---------------------------------------------- #
 
-hostname: localhost
+hostname: 0.0.0.0
 port: 9092
 password: sad12312d121232f131232131f2421
